# factcheck

./: .gitignore  README.md  benchmark.py  pyproject.toml  quick_results.json  quick_test.txt  record_demo.sh  requirements.txt  setup.py  test_claims.txt  test_claims_extended.txt  test_current.txt  test_current_results.json  webapp.py
factcheck/: __init__.py  agent.py  cli.py  kg.py  web.py
